--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "kyanite",
   "type": "module",
   "description": "A simple SHA256 hash brute-forcer written in Node.js",
-  "version": "2.0.0",
+  "version": "2.1.1",
   "main": "index.js",
   "dependencies": {
-    "brute-force-generator": "^1.0.1"
+    "brute-force-generator": "^1.0.1",
+    "yargs": "^16.1.1"
   },
   "devDependencies": {},
   "scripts": {
