Organise files and use ESLint + Prettier

--- a/package.json
+++ b/package.json
@@ -8,9 +8,19 @@
     "brute-force-generator": "^1.0.1",
     "yargs": "^16.1.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^7.15.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.2.0",
+    "prettier": "^2.2.1"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint src/*.js",
+    "format": "prettier --write \"**/*.+(js|json|md)\""
   },
   "repository": {
     "type": "git",
