--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "kyanite",
   "type": "module",
   "description": "A simple SHA256 hash brute-forcer written in Node.js",
-  "version": "2.1.1",
+  "version": "3.0.0",
   "main": "index.js",
   "dependencies": {
-    "brute-force-generator": "^1.0.1",
+    "indexed-string-variation": "^1.0.3",
     "yargs": "^16.1.1"
   },
   "devDependencies": {
@@ -21,6 +21,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint src/*.js",
     "format": "prettier --write \"**/*.+(js|json|md)\""
+  },
+  "prettier": {
+    "singleQuote": true
   },
   "repository": {
     "type": "git",
